--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,8 +27,21 @@ body {
 
 #content {
   width: 80vw;
-  height: 80vh;
+  min-height: 80vh;
   border: 3px solid rgba(0,255,0,0.3);
   box-shadow: 5px 5px green;
+  border-radius: 10px;
+}
+
+#brownies {
+  /* overflow: scroll; */
+}
+
+#brownies > div {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 40px;
+  border: 1px solid black;
   border-radius: 10px;
 }
