--- a/src/css/index.css
+++ b/src/css/index.css
@@ -39,9 +39,41 @@ body {
 
 #brownies > div {
   display: flex;
-  justify-content: space-between;
+  justify-content: left;
+  align-items: center;
   width: 100%;
-  height: 40px;
-  border: 1px solid black;
+  height: 80px;
+  border: 1px solid green;
   border-radius: 10px;
+}
+
+div > img {
+  width: 80px;
+  border-radius: inherit;
+}
+
+div > span:first-child {
+  text-align: center;
+  margin-left: 0px;
+  width: 70px;
+  font-size: 40px;
+  border: 1px solid red;
+}
+
+div > span {
+  text-align: center;
+  margin-left: 0px;
+  width: 180px;
+  font-size: 40px;
+  border: 1px solid red;
+}
+
+div > span:nth-child(3){
+  text-align: left;
+  margin-left: 10px;
+  width: 500px;
+}
+
+#resultTitle {
+
 }
