--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,6 +16,17 @@ body {
   border-radius: 10px;
 }
 
+.footer {
+  text-align: center;
+  width: 100%;
+  background: rgba(0,255,0,0.3);
+  box-shadow: 5px 5px green;
+  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  border-radius: 10px;
+}
+
 #root {
   display: flex;
   justify-content: center;
@@ -57,7 +68,7 @@ div > span:first-child {
   margin-left: 0px;
   width: 70px;
   font-size: 40px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 div > span {
@@ -65,15 +76,11 @@ div > span {
   margin-left: 0px;
   width: 180px;
   font-size: 40px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 div > span:nth-child(3){
   text-align: left;
   margin-left: 10px;
   width: 500px;
-}
-
-#resultTitle {
-
 }
